@@ -95,10 +95,14 @@
 	package headers that would be produced by a spec file.
     - jbj: add the wiring for RPMTAG_CLASS as an arbitrary tag.
     - jbj: change RPM_I18NSTRING_TYPE wiring to use arbitrary tag.
+    - jbj: hmm RPMTAG_TRACK contents not added to *.rpm yet.
+    - jbj: drill sanitycheck exec into psmStage() like %verifyscript.
+    - jbj: add Requires: sanitycheck(N) runtime namespace probe.
 
   o to be resolved before RPM 5.0.0:
     - rse: NEWS polishing
     - jbj: fix openssl RSA signature verification.
+    - jbj: drill Requires: sanitycheck(N) = E:V-R runtime probe.
 
   RPM 5.1 ROADMAP ISSUES
   ----------------------
