@@ -287,15 +287,12 @@ int processScriptFiles(Spec spec, Package pkg)
 	}
     }
 
-#if defined(RPM_VENDOR_OPENPKG) /* extra-section-test */
-    /* support "%test" script/section */
-    if (pkg->testFile) {
-        if (addFileToTag(spec, pkg->testFile, pkg->header, RPMTAG_TEST)) {
-            rpmlog(RPMLOG_ERR, _("Could not open Test file: %s\n"), pkg->testFile);
+    if (pkg->sanityCheckFile) {
+        if (addFileToTag(spec, pkg->sanityCheckFile, pkg->header, RPMTAG_SANITYCHECK)) {
+            rpmlog(RPMLOG_ERR, _("Could not open Test file: %s\n"), pkg->sanityCheckFile);
             return RPMRC_FAIL;
         }
     }
-#endif
 
     for (p = pkg->triggerFiles; p != NULL; p = p->next) {
 	he->tag = RPMTAG_TRIGGERSCRIPTPROG;
